--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
     <script src="Build/UnityLoader.js"></script>
     <script>
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/FlappySnoopWeb0_1_2.json", {onProgress: UnityProgress});
-      gameInstance.SetFullscreen(1)
     </script>
   </head>
   <body>
     <div class="webgl-content">
-      <div id="gameContainer" style="width: 960px; height: 600px"></div>
+      <div id="gameContainer" style="width: 100%; height: 100%"></div>
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Flappy Snoop</div>
+        <!-- <div class="title">Flappy Snoop</div> -->
       </div>
     </div>
   </body>
