--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
   </head>
   <body>
     <div class="webgl-content">
-      <div id="gameContainer" style="width: 1600px; height: 900px"></div>
+      <div id="gameContainer" style="width: 100%; height: 100%"></div>
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Flappy Snoop</div>
       </div>
     </div>
   </body>
