--- a/klimakampen.html
+++ b/klimakampen.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="klimakampenstyle.css">
 <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet"> 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 <style>
@@ -17,7 +18,7 @@ body {
     z-index: 5;
     top: 0;
     left: 0;
-    background-color: rgb(212, 221, 224);
+    background-color: #ddebd7;
     background-color: rgba(212, 221, 224 0.9);
     overflow-x: hidden;
     transition: 0.5s;
@@ -35,8 +36,7 @@ body {
 .overlay a {
     padding: 10px;
     text-decoration: none;
-    font-size: 12vw;
-    line-height: 12vw;
+    font-size: 36px;
     color: #818181;
     display: block;
     transition: 0.3s;
@@ -74,24 +74,36 @@ body {
     <a href="#">Kontakt</a>
   </div>
 </div>
-&#9776;
+
 <div class="container">
     <div class="header" style="padding-top: 5vw;">
-      <span style="font-size: 10vw;height: 100%;width: 100%;line-height: 100%;height: 16vw;vertical-align: super;padding-left: 5vw;">
+      <span style="font-size: 10vw;height: 100%;width: 100%;line-height: 100%;height: 16vw;padding-left: 5vw;">
     <i class="fas fa-bars" class="nav" onclick="openNav()"></i>
   </span>
-    <span ><img src="https://nef.dk/media/1014/nef_fonden_rgb.png" style="width:12vw;height:12vw;line-height: 9vw;padding-left: 28vw;overflow:visible;vertical-align: text-bottom;"></span>
+    <span class="nav" style="text-align: center;font-family: 'Fredericka the Great', cursive;font-size: 9vw;">KLIMAKAMPEN</span>
   </div>
-  <div style="padding:6vw;"></div>
-  <div class="container-item item-1">
-    <span><img src="consumptioncurve.jpg" style="width:100%;height:100%;"></span>
-  </div>
-  <div class="container-item item-2">
-      <span><img src="consumptioncurve.jpg" style="width:100%;height:100%;"></span>
-  </div>
-  <div class="container-item item-3">
-      <span><img src="consumptioncurve.jpg" style="width:100%;height:100%;"></span>
-  </div>
+  <div style="padding:10vw;"></div>
+<div class="container-item item-1">
+    <span style="color:greenyellow">
+        <i class="fas fa-question"></i>
+    </span>
+    <i>Quest here</i>
+    </br>
+    <i>Worth 50 NP</i>
+    <i></i>
+</div>
+<div class="container-item item-2">
+        <span style="color:gold">
+                <i class="fas fa-trophy"></i>
+            </span>
+            <i>Achievement here</i>
+</div>
+<div class="container-item item-3">
+        <span style="color:gold">
+                <i class="fas fa-trophy"></i>
+            </span>
+            <i>Achievement here</i>
+</div>
 </div>
   <div class="footer">
         <a href="index.html">
@@ -101,7 +113,6 @@ body {
         <div href="klimakampen.html" class="klimakampen">KLIMAKAMPEN</div>
       </a>
       </div>
-</div>
 <script>
 function openNav() {
   document.getElementById("myNav").style.width = "100%";
