--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body {
     <span><img src="consumptioncurve.jpg" style="width:100%;height:100%;"></span>
   </div>
   <div class="container-item item-2">
-      <span><img src="consumptioncurve.jpg" style="width:100%;height:100%;"></span>
+      <span><img src="curve2.jpg" style="width:100%;height:100%;"></span>
   </div>
   <div class="container-item item-3">
       <span><img src="consumptioncurve.jpg" style="width:100%;height:100%;"></span>
