Translated app and added new text to quests and achivements

--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@ body {
 <div id="myNav" class="overlay">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content">
-    <a href="#">Forbrug</a>
-    <a href="#">Sammenligning</a>
-    <a href="#">Indstillninger</a>
-    <a href="#">Kontakt</a>
+    <a href="#">Consumption</a>
+    <a href="#">Comparrisons</a>
+    <a href="#">Settings</a>
+    <a href="#">Contact</a>
+    <a href="#">Bills</a>
   </div>
 </div>
 &#9776;
