--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	</head>
 	<body class="is-preload">
 
@@ -22,7 +23,7 @@
 						<a href="#" class="icon fa-home"><span>Home</span></a>
 						<a href="#work" class="icon fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
-						<a href="https://twitter.com/ajlkn" class="icon fa-twitter"><span>Twitter</span></a>
+						<a href="https://twitter.com/MizenDaCat" class="icon fa-twitter"><span>Twitter</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -31,12 +32,12 @@
 						<!-- Me -->
 							<article id="home" class="panel intro">
 								<header>
-									<h1>Jane Doe</h1>
-									<p>Senior Astral Projectionist</p>
+									<h1>Mads Lunde</h1>
+									<p>Backend Developer</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
+									<img src="images/mads.jpg" alt="" />
 								</a>
 							</article>
 
@@ -46,48 +47,18 @@
 									<h2>Work</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									I am close to finishing my B.Eng in Softwaretechnology at the University of Southern Denmark. Currently on my 5th semester, which is a full 6 months of internship. 
+									<br/>I am lucky to have the opportunity to carry out my internship at the wonderful E-Commerce developing company: Oxygen, in Odense.
+									<br/>At Oxygen, my primary role is as backend developer in web-developemnt. Developing e-commerce sites in ASP.NET with Umbraco CMS.
+									
 								</p>
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="images/sprogklar-logo.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
-										</div>
 									</div>
 								</section>
 							</article>
@@ -97,27 +68,15 @@
 								<header>
 									<h2>Contact Me</h2>
 								</header>
-								<form action="#" method="post">
-									<div>
-										<div class="row">
-											<div class="col-6 col-12-medium">
-												<input type="text" name="name" placeholder="Name" />
-											</div>
-											<div class="col-6 col-12-medium">
-												<input type="text" name="email" placeholder="Email" />
-											</div>
-											<div class="col-12">
-												<input type="text" name="subject" placeholder="Subject" />
-											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message" rows="6"></textarea>
-											</div>
-											<div class="col-12">
-												<input type="submit" value="Send Message" />
-											</div>
-										</div>
-									</div>
-								</form>
+								<p>
+									Here are some ways to get in touch with me:
+								</p>
+								<ul class="social">
+									<li><a class="social-item" href="https://github.com/MadsLunde"><i class="fab fa-github fa-5x"></i></a></li>
+									<li><a class="social-item" href="https://twitter.com/MizenDaCat"><i class="fab fa-twitter fa-5x"></i></a></li>
+									<li><a class="social-item" href="https://www.linkedin.com/in/mads-lunde/"><i class="fab fa-linkedin fa-5x"></i></a></li>
+									<li><a class="social-item" href="mailto: mads.lunde31@gmail.com"><i class="fas fa-envelope-square fa-5x"></i></a></li>
+								</ul>
 							</article>
 
 					</div>
@@ -125,7 +84,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+
 						</ul>
 					</div>
 
